trunk/Archive2/a7/e940f32818469f/output
main.cpp: In function 'int main()':
main.cpp:19:8: error: no matching function for call to 'f(int)'
     f(4);
        ^
main.cpp:16:6: note: candidate: template<class T> void f(typename Lol<T>::truc&)
 void f(typename Lol<T>::truc &) {}
      ^
main.cpp:16:6: note:   template argument deduction/substitution failed:
main.cpp:19:8: note:   couldn't deduce template parameter 'T'
     f(4);
        ^
main.cpp:20:15: error: no matching function for call to 'f(std::__cxx11::basic_string<char>)'
     f("Hello"s);
               ^
main.cpp:16:6: note: candidate: template<class T> void f(typename Lol<T>::truc&)
 void f(typename Lol<T>::truc &) {}
      ^
main.cpp:16:6: note:   template argument deduction/substitution failed:
main.cpp:20:15: note:   couldn't deduce template parameter 'T'
     f("Hello"s);
               ^
